--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <th>Structured Answers</th>
                 <th>Not Stressed</th>
                 <th>Not Awkward</th>
+                <th>Score (Ground Truth)</th> <!-- New column for score -->
             </tr>
         </thead>
         <tbody id="groundTruthBody"></tbody>
@@ -84,6 +85,7 @@
                 <th>Structured Answers</th>
                 <th>Not Stressed</th>
                 <th>Not Awkward</th>
+                <th>Score (GPT-4o)</th> <!-- New column for score -->
             </tr>
         </thead>
         <tbody id="gpt4oBody"></tbody>
