--- a/index.html
+++ b/index.html
@@ -43,21 +43,23 @@
                 <th>Participant</th>
                 <th>Overall</th>
                 <th>Recommend Hiring</th>
+                <th>Colleague</th>
                 <th>Engaged</th>
                 <th>Excited</th>
                 <th>Eye Contact</th>
                 <th>Smiled</th>
-                <th>Friendly</th>
                 <th>Speaking Rate</th>
                 <th>No Fillers</th>
+                <th>Friendly</th>
                 <th>Paused</th>
-                <th>Authentic</th>
-                <th>Calm</th>
-                <th>Focused</th>
+                <th>Engaging Tone</th>
                 <th>Structured Answers</th>
+                <th>Calm</th>
                 <th>Not Stressed</th>
+                <th>Focused</th>
+                <th>Authentic</th>
                 <th>Not Awkward</th>
-                <th>Score (Ground Truth)</th> <!-- New column for score -->
+                <th>Total</th>
             </tr>
         </thead>
         <tbody id="groundTruthBody"></tbody>
@@ -71,21 +73,23 @@
                 <th>Participant</th>
                 <th>Overall</th>
                 <th>Recommend Hiring</th>
+                <th>Colleague</th>
                 <th>Engaged</th>
                 <th>Excited</th>
                 <th>Eye Contact</th>
                 <th>Smiled</th>
-                <th>Friendly</th>
                 <th>Speaking Rate</th>
                 <th>No Fillers</th>
+                <th>Friendly</th>
                 <th>Paused</th>
-                <th>Authentic</th>
-                <th>Calm</th>
-                <th>Focused</th>
+                <th>Engaging Tone</th>
                 <th>Structured Answers</th>
+                <th>Calm</th>
                 <th>Not Stressed</th>
+                <th>Focused</th>
+                <th>Authentic</th>
                 <th>Not Awkward</th>
-                <th>Score (GPT-4o)</th> <!-- New column for score -->
+                <th>Total</th>
             </tr>
         </thead>
         <tbody id="gpt4oBody"></tbody>
