--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </tr>
         </thead>
         <tbody id="groundTruthBody">
-            <!-- Placeholder rows for Ground Truth ratings -->
+            <!-- Data will be dynamically populated here -->
         </tbody>
     </table>
 
@@ -78,12 +78,10 @@
             </tr>
         </thead>
         <tbody id="gpt4oBody">
-            <!-- Placeholder rows for GPT-4o ratings -->
+            <!-- Data will be dynamically populated here -->
         </tbody>
     </table>
 
-    <script>
-        // Placeholder data for demonstration
-        const groundTruthData = [
-            { Participant: 'p1', Overall: 5.297315623, RecommendHiring: 5.10622414, Colleague: 5.33300425, Engaged: 5.541379781, Excited: 5.043890154, EyeContact: 5.866118592, Smiled: 3.57615974, SpeakingRate: 4.865589795, NoFillers: 3.771664731, Friendly: 5.25478356, Paused: 5.800467905, EngagingTone: 5.147909377, StructuredAnswers: 4.891580046, Calm: 5.351075433, NotStressed: 5.350759594, Focused: 5.845226374, Authentic: 5.610512744, NotAwkward: 5.477533668, Total: 93.13119551 },
-            { Participant: 'p10', Overall: 4.725115255, RecommendHiring: 4.459354708, Colleague: 4.607881239, Engaged: 4.812740563, Excited: 4.383946889, EyeContact: 4.666025308, Smiled: 4.879008428, SpeakingRate: 4.775368737, NoFillers: 2.778182827, Friendly: 5.74780274, Paused: 5.614909493, EngagingTone: 4.819107369, StructuredAnswers: 3.575960131, Calm: 4.445185009, NotStressed: 4.542911343, Foc
+    <script src="script.js"></script>
+</body>
+</html>
